# mfc2qt

./: CMakeLists.txt  make.sh  readme.md
1-2-ConsolProjects/: CMakeLists.txt
1-2-ConsolProjects/BankAccount/: BankAccount.cpp  BankAccount.h  Main.cpp
1-2-ConsolProjects/BinaryStream/: Main.cpp
1-2-ConsolProjects/Car/: Car.cpp  Car.h  Main.cpp
1-2-ConsolProjects/Exception/: Main.cpp
1-2-ConsolProjects/HigherOrderFunctions/: Main.cpp
1-2-ConsolProjects/Inheritance1/: Employee.cpp  Employee.h  Main.cpp  Person.cpp  Person.h  Student.cpp  Student.h
1-2-ConsolProjects/Inheritance2/: Employee.cpp  Employee.h  Main.cpp  Person.cpp  Person.h  Student.cpp  Student.h
1-2-ConsolProjects/LinkedList/: Cell.cpp  Cell.h  Main.cpp
1-2-ConsolProjects/Rational/: Main.cpp  Rational.cpp  Rational.h
1-2-ConsolProjects/Size/: Main.cpp
1-2-ConsolProjects/Stack/: Main.cpp  Stack.cpp  Stack.h
1-2-ConsolProjects/TemplateStack/: Main.cpp  TemplateCell.h  TemplateStack.h
1-2-ConsolProjects/TextStream/: Main.cpp
4-Ring/: .gitignore  CMakeLists.txt  Ring.cpp  Ring.h  Ring.rc  RingDoc.h  RingView.cpp  RingView.h  resource.h  stdafx.cpp
4-Ring/res/: Ring.rc2
5-Utility/: Caret.cpp  Caret.h  Check.h  Color.cpp  Color.h  Font.cpp  Font.h  List.h  Set.h  utility.cmake
6-Tetris/: CMakeLists.txt  ColorGrid.cpp  ColorGrid.h  Figure.cpp  Figure.h  FigureInfo.cpp  FigureInfo.h  MainFrm.cpp  ReadMe.txt  Square.cpp  Square.h  Tetris.aps  Tetris.cpp  Tetris.h  TetrisDoc.cpp  TetrisDoc.h  TetrisView.cpp  TetrisView.h  stdafx.cpp
7-Draw/: ArrowFigure.cpp  ArrowFigure.h  CMakeLists.txt  ChildFrm.cpp  Draw.cpp  Draw.h  Draw.rc  DrawDoc.cpp  DrawDoc.h  DrawView.cpp  DrawView.h  EllipseFigure.cpp  EllipseFigure.h  Figure.cpp  Figure.h  FigureFileManager.cpp  FigureFileManager.h  LineFigure.cpp  LineFigure.h  MainFrm.cpp  ReadMe.txt  RectangleFigure.cpp  RectangleFigure.h  Resource.h  TextFigure.cpp  TextFigure.h  TwoDimensionalFigure.cpp  TwoDimensionalFigure.h  stdafx.cpp
8-Calc/: CMakeLists.txt  Calc.cpp  Calc.h  Calc.rc  CalcDoc.cpp  CalcDoc.h  CalcView.cpp  CalcView.h  Cell.cpp  Cell.h  CellMatrix.cpp  CellMatrix.h  ChildFrm.cpp  MainFrm.cpp  Parser.cpp  Parser.h  Reference.cpp  Reference.h  Resource.h  Scanner.cpp  Scanner.h  SyntaxTree.cpp  SyntaxTree.h  TSetMatrix.cpp  TSetMatrix.h  Token.cpp  Token.h  stdafx.cpp
8-Calc/res/: Thumbs.db
9-Word/: CMakeLists.txt  ChildFrm.cpp  Line.cpp  Line.h  MainFrm.cpp  Page.cpp  Page.h  Paragraph.cpp  Paragraph.h  Position.cpp  Position.h  Resource.h  Word.aps  Word.cpp  Word.h  Word.rc  WordDoc.cpp  WordDoc.h  WordView.cpp  WordView.h  stdafx.cpp
Ring/: CMakeLists.txt  ChildFrm.cpp  MainFrm.cpp  ReadMe.txt  Ring.cpp  Ring.h  Ring.rc  RingDoc.cpp  RingDoc.h  RingView.cpp  resource.h
qtwinmigrate/: qwinwidget.cpp
